# Agentproof

./: .env.example  .gitignore  DEMO_SCRIPT.md  README.md  SUBMISSION.md  agentproof.mermaid  entry-points.json  main.py  project.uiproj  pyproject.toml  requirements.txt  server.py  uipath.json
agentproof/: _config.py  contracts.py  db.py  regression.py  reporter.py  runner.py  validator.py
api/: index.py
dashboard/: app.py
demo_agent/: main.py
shopease_support_agent/: entry-points.json  main.py  project.uiproj  pyproject.toml  uipath.json
shopease_support_agent/evaluations/: README.md
shopease_support_agent/evaluations/eval-sets/: shopease-behavior.json
shopease_support_agent/evaluations/evaluators/: contains-refund.json  judge-behavior.json
target_agents/hr_onboarding_agent/: entry-points.json  main.py  project.uiproj  pyproject.toml  uipath.json
target_agents/invoice_processing_agent/: entry-points.json  main.py  project.uiproj  pyproject.toml  uipath.json
target_agents/it_helpdesk_agent/: entry-points.json  main.py  project.uiproj  pyproject.toml  uipath.json
target_agents/loan_eligibility_agent/: entry-points.json  loan_eligibility_agent.mermaid  main.py  project.uiproj  pyproject.toml  uipath.json
templates/: report.html
test_suites/: aria_customer_support.json
