[project]
name = "agentproof"
version = "0.1.0"
description = "Behavioral testing framework for AI agents"
authors = [{ name = "Eeman Asghar", email = "eemanasghar2@gmail.com" }]
dependencies = [
    "openai>=1.30.0",
    "psycopg2-binary>=2.9.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
uipath = [
    "uipath-langchain>=0.1.0",
    "langgraph>=0.1.0",
    "jinja2>=3.1.0",
    "weasyprint>=62.0",
]

[tool.vercel]
entrypoint = "server:app"
