[project]
name = "shopease-support-agent"
version = "0.1.0"
description = "ShopEasy customer support agent — demo validation target for AgentProof"
authors = [{ name = "Eeman Asghar", email = "eemanasghar2@gmail.com" }]
dependencies = [
    "openai>=1.30.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.10"
