[project]
name = "shopease-support-agent"
version = "0.2.0"
description = "ShopEasy customer support agent — demo validation target for AgentProof"
authors = [{ name = "Eeman Asghar", email = "eemanasghar2@gmail.com" }]
dependencies = [
    "uipath>=2.0.0",
    "openai>=1.30.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.10"
