[project]
name = "loan-eligibility-agent"
version = "0.2.0"
description = "Loan Eligibility Agent — demo agent published for AgentProof validation"
authors = [{ name = "Eeman Asghar", email = "eemanasghar2@gmail.com" }]
dependencies = [
    "uipath>=2.0.0",
    "openai>=1.30.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.10"
